syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "WorkeffortProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: WorkEffort
message WorkEffortFlatData {
    option (routines.entity_type) = "WorkEffort";
    option (routines.keys).keys = "work_effort_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: workEffortId
    string work_effort_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string work_effort_type_id = 2 [(routines.opts).field_type = "id"];
    string current_status_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_status_update = 4 [(routines.opts).field_type = "date-time"];
    string work_effort_purpose_type_id = 5 [(routines.opts).field_type = "id"];
    string work_effort_parent_id = 6 [(routines.opts).field_type = "id"];
    string scope_enum_id = 7 [(routines.opts).field_type = "id"];
    int64 priority = 8 [(routines.opts).field_type = "numeric"];
    int64 percent_complete = 9 [(routines.opts).field_type = "numeric"];
    string work_effort_name = 10 [(routines.opts).field_type = "name"];
    string show_as_enum_id = 11 [(routines.opts).field_type = "id"];
    routines.Indicator send_notification_email = 12 [(routines.opts).field_type = "indicator"];
    string description = 13 [(routines.opts).field_type = "description"];
    string location_desc = 14 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp estimated_start_date = 15 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp estimated_completion_date = 16 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp actual_start_date = 17 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp actual_completion_date = 18 [(routines.opts).field_type = "date-time"];
    double estimated_milli_seconds = 19 [(routines.opts).field_type = "floating-point"];
    double estimated_setup_millis = 20 [(routines.opts).field_type = "floating-point"];
    string estimate_calc_method = 21 [(routines.opts).field_type = "id"];
    double actual_milli_seconds = 22 [(routines.opts).field_type = "floating-point"];
    double actual_setup_millis = 23 [(routines.opts).field_type = "floating-point"];
    double total_milli_seconds_allowed = 24 [(routines.opts).field_type = "floating-point"];
    routines.Currency total_money_allowed = 25 [(routines.opts).field_type = "currency-amount"];
    string money_uom_id = 26 [(routines.opts).field_type = "id"];
    string special_terms = 27 [(routines.opts).field_type = "long-varchar"];
    int64 time_transparency = 28 [(routines.opts).field_type = "numeric"];
    string universal_id = 29 [(routines.opts).field_type = "short-varchar"];
    string source_reference_id = 30 [(routines.opts).field_type = "id-long"];
    string fixed_asset_id = 31 [(routines.opts).field_type = "id"];
    string facility_id = 32 [(routines.opts).field_type = "id"];
    string info_url = 33 [(routines.opts).field_type = "long-varchar"];
    string recurrence_info_id = 34 [(routines.opts).field_type = "id"];
    string temp_expr_id = 35 [(routines.opts).field_type = "id"];
    string runtime_data_id = 36 [(routines.opts).field_type = "id"];
    string note_id = 37 [(routines.opts).field_type = "id"];
    string service_loader_name = 38 [(routines.opts).field_type = "name"];
    routines.FixedPoint quantity_to_produce = 39 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint quantity_produced = 40 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint quantity_rejected = 41 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_persons = 42 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_2nd_p_p_perc = 43 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_nth_p_p_perc = 44 [(routines.opts).field_type = "fixed-point"];
    string accommodation_map_id = 45 [(routines.opts).field_type = "id"];
    string accommodation_spot_id = 46 [(routines.opts).field_type = "id"];
    int64 revision_number = 47 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp created_date = 48 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 49 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 50 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 51 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 52 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 53 [(routines.opts).field_type = "date-time"];
    int64 sequence_num = 54 [(routines.opts).field_type = "numeric"];
    string tenant_id = 55 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 119;
    map<string, google.protobuf.Any> attachments = 120 ;
}

message WorkEffortKey{
    string work_effort_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message WorkEffortList{
    repeated WorkEffortFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWorkEfforts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Work Effort Association
message WorkEffortAssocData {
    option (routines.entity_type) = "WorkEffortAssoc";
    option (routines.keys).keys = "work_effort_id_from, work_effort_id_to, work_effort_assoc_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: workEffortIdFrom, workEffortIdTo, workEffortAssocTypeId, fromDate
    // fields
    string work_effort_id_from = 1 [(routines.opts).field_type = "id"];
    string work_effort_id_to = 2 [(routines.opts).field_type = "id"];
    string work_effort_assoc_type_id = 3 [(routines.opts).field_type = "id"];
    int64 sequence_num = 4 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp from_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    string id = 9 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message WorkEffortAssocKey{
    string work_effort_id_from = 1 [(routines.opts).field_type = "id"];
    string work_effort_id_to = 2 [(routines.opts).field_type = "id"];
    string work_effort_assoc_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message WorkEffortAssocList{
    repeated WorkEffortAssocData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWorkEffortAssocs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Work Effort Fixed Asset Assignment
message WorkEffortFixedAssetAssignData {
    option (routines.entity_type) = "WorkEffortFixedAssetAssign";
    option (routines.keys).keys = "work_effort_id, fixed_asset_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: workEffortId, fixedAssetId, fromDate
    // fields
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 2 [(routines.opts).field_type = "id"];
    string status_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    string availability_status_id = 6 [(routines.opts).field_type = "id"];
    routines.Currency allocated_cost = 7 [(routines.opts).field_type = "currency-amount"];
    string comments = 8 [(routines.opts).field_type = "comment"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17;
}


message WorkEffortFixedAssetAssignKey{
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message WorkEffortFixedAssetAssignList{
    repeated WorkEffortFixedAssetAssignData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWorkEffortFixedAssetAssigns` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Work Effort Good Standard
message WorkEffortGoodStandardData {
    option (routines.entity_type) = "WorkEffortGoodStandard";
    option (routines.keys).keys = "work_effort_id, product_id, work_effort_good_std_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: workEffortId, productId, workEffortGoodStdTypeId, fromDate
    // fields
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string product_id = 2 [(routines.opts).field_type = "id"];
    string work_effort_good_std_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    string status_id = 6 [(routines.opts).field_type = "id"];
    double estimated_quantity = 7 [(routines.opts).field_type = "floating-point"];
    routines.Currency estimated_cost = 8 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17;
}


message WorkEffortGoodStandardKey{
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string product_id = 2 [(routines.opts).field_type = "id"];
    string work_effort_good_std_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message WorkEffortGoodStandardList{
    repeated WorkEffortGoodStandardData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWorkEffortGoodStandards` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Work Effort Party Assignment
message WorkEffortPartyAssignmentData {
    option (routines.entity_type) = "WorkEffortPartyAssignment";
    option (routines.keys).keys = "work_effort_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: workEffortId, partyId, roleTypeId, fromDate
    // fields
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    string assigned_by_user_login_id = 6 [(routines.opts).field_type = "id-vlong"];
    string status_id = 7 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date_time = 8 [(routines.opts).field_type = "date-time"];
    string expectation_enum_id = 9 [(routines.opts).field_type = "id"];
    string delegate_reason_enum_id = 10 [(routines.opts).field_type = "id"];
    string facility_id = 11 [(routines.opts).field_type = "id"];
    string comments = 12 [(routines.opts).field_type = "comment"];
    routines.Indicator must_rsvp = 13 [(routines.opts).field_type = "indicator"];
    string availability_status_id = 14 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 15 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    string id = 17 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 29;
    map<string, google.protobuf.Any> attachments = 30;
}


message WorkEffortPartyAssignmentKey{
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message WorkEffortPartyAssignmentList{
    repeated WorkEffortPartyAssignmentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWorkEffortPartyAssignments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Work Effort Skill Standard
message WorkEffortSkillStandardData {
    option (routines.entity_type) = "WorkEffortSkillStandard";
    option (routines.keys).keys = "work_effort_id, skill_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: workEffortId, skillTypeId
    // fields
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string skill_type_id = 2 [(routines.opts).field_type = "id"];
    double estimated_num_people = 3 [(routines.opts).field_type = "floating-point"];
    double estimated_duration = 4 [(routines.opts).field_type = "floating-point"];
    routines.Currency estimated_cost = 5 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message WorkEffortSkillStandardKey{
    string work_effort_id = 1 [(routines.opts).field_type = "id"];
    string skill_type_id = 2 [(routines.opts).field_type = "id"];
}

message WorkEffortSkillStandardList{
    repeated WorkEffortSkillStandardData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWorkEffortSkillStandards` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


